parser/src/parser/expressions/snapshots/parser__parser__expressions__index_expr__tests__parse_simple_index_expr.snap
---
source: parser/src/parser/expressions/index_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 19)
  FN_DEF@[0; 19)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 19)
      BLOCK@[10; 19)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 17)
          INDEX_EXPR@[11; 17)
            IDENT_EXPR@[11; 12)
              NAME@[11; 12)
                IDENT@[11; 12) "a"
            L_BRACK@[12; 13) "["
            BIN_EXPR@[13; 16)
              LITERAL@[13; 14)
                INT_NUMBER@[13; 14) "1"
              PLUS@[14; 15) "+"
              LITERAL@[15; 16)
                INT_NUMBER@[15; 16) "2"
            R_BRACK@[16; 17) "]"
        SEMI@[17; 18) ";"
        R_CURLY@[18; 19) "}"

